# chatgpt-prompt-wrapper

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml  renovate.json  setup.sh
.github/workflows/: template_test.yml  test.yml
src/chatgpt_cli/: __init__.py  arg_parser.py  chatgpt.py  chatgpt_cli.py  chatgpt_cli_exception.py  config.py  init_cmd.py
src/chatgpt_prompt_wrapper/: __init__.py  arg_parser.py  chatgpt.py  chatgpt_prompt_wrapper.py  chatgpt_prompt_wrapper_exception.py  config.py  docstring.py  init_cmd.py  log_formatter.py
src/chatgpt_prompt_wrapper/chatgpt/: __init__.py  ask.py  chat.py  chatgpt.py  discuss.py  discussion.py  stream.py
src/chatgpt_prompt_wrapper/cmd/: commands.py  cost.py  init.py
src/chatgpt_prompt_wrapper/cmds/: __init__.py  commands.py  cost.py  init.py
tests/: conftest.py  test_arg_parser.py  test_chatgpt_cli.py  test_config.py  test_version.py
