[project]
name = "chatgpt-prompt-wrapper"
version = "0.1.3"
description = "CLI tool to wrap ChatGPT Python API."
authors = [
  { name = "rcmdnk", email = "rcmdnk@gmail.com" }
]
readme = "README.md"
license = "apache-2.0"
keywords = ["chat", "gpt", "openai", "cli"]
classifiers = ["Development Status :: 3 - Alpha", "Environment :: Console", "Intended Audience :: Developers", "Intended Audience :: End Users/Desktop", "License :: OSI Approved :: Apache Software License", "Natural Language :: English", "Operating System :: OS Independent", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Topic :: Communications :: Chat", "Topic :: Utilities"]

requires-python = ">=3.9"
dependencies = [
  "tomli >=2.0.1; python_version <'3.11'",
  "openai >=1.0.0",
  "tiktoken >=0.8.0",
  "prompt-toolkit >=3.0.39",
  "conf-finder >=0.2.1",
  "inherit-docstring >=0.1.4",
]

[project.urls]
Repository = "https://github.com/rcmdnk/chatgpt-prompt-wrapper"
Documentation = "https://github.com/rcmdnk/chatgpt-prompt-wrapper"
Homepage = "https://github.com/rcmdnk/chatgpt-prompt-wrapper"
Issue = "https://github.com/rcmdnk/chatgpt-prompt-wrapper/issues"

[dependency-groups]
dev = [
    "pytest >=8.0.0",
    "pytest-cov >=6.0.0",
    "pytest-xdist >=3.2.1",
    "pytest-benchmark >=5.0.0",
    "pyproject-pre-commit[ruff] >=0.3.4",
]

[project.scripts]
cg = "chatgpt_prompt_wrapper:main"
chatgpt_prompt_wrapper = "chatgpt_prompt_wrapper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-n auto"
testpaths = ["tests",]

[tool.ruff]
line-length = 79
# quote-style = "single"

[tool.ruff.lint]
# select = ["ALL"]
# select = ["E4", "E7", "E9", "F"]  # default, black compatible
select = [  # similar options to black, flake8 + plugins, isort etc...)
  #"E4",  # Import (comparable to black)
  #"E7",  # Indentation (comparable to black)
  #"E9",  # Blank line (comparable to black)
  "F",   # String (comparable to black)
  "I",   # Import order (comparable to isort)
  "S",   # flake8-bandit (comparable to bandit)
  "B",   # flake8-bugbear
  "A",   # flake8-builtins
  "C4",   # flake8-comprehensions
  "T10",  # flake8-debugger
  "EXE",  # flake8-executable
  "T20", # flake8-print
  "N", # pep8-naming
  "E", # pycodestyle
  "W", # pycodestyle
  "C90", # mccabe
]

ignore = [
 "E203", # Not PEP8 compliant and black insert space around slice: [Frequently Asked Questions - Black 22.12.0 documentation](https://black.readthedocs.io/en/stable/faq.html#why-are-flake8-s-e203-and-w503-violated)
 "E501", # Line too long. Disable it to allow long lines of comments and print lines which black allows.
# "E704", # NOT in ruff. multiple statements on one line (def). This is inconsistent with black >= 24.1.1 (see ttps://github.com/psf/black/pull/3796)
# "W503", # NOT in ruff. is the counter part of W504, which follows current PEP8: [Line break occurred before a binary operator (W503)](https://www.flake8rules.com/rules/W503.html)
 "D100", "D102", "D103", "D104", "D105", "D106", # Missing docstrings other than class (D101)
 "D401", # First line should be in imperative mood
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
files = ["src/**/*.py"]
strict = true
warn_return_any = false
ignore_missing_imports = true
scripts_are_modules = true
install_types = true
non_interactive = true
